# 
# 
# THIS MATERIAL IS PROVIDED AS IS, WITH ABSOLUTELY NO WARRANTY EXPRESSED
# OR IMPLIED.  ANY USE IS AT YOUR OWN RISK.
# 
# Permission is hereby granted to use or copy this program
# for any purpose,  provided the above notices are retained on all copies.
# Permission to modify the code and to distribute modified code is granted,
# provided the above notices are retained, and a notice that the code was
# modified is included with the above copyright notice.
#
# Modified by: Grzegorz Jakacki <jakacki at acm dot org>

## Process this file with automake to produce Makefile.in.

# installed documentation
#
dist_pkgdata_DATA = barrett_diagram debugging.html gc.man \
    gcdescr.html README README.amiga README.arm.cross \
    README.autoconf README.changes README.contributors \
    README.cords README.DGUX386 README.dj README.environment \
    README.ews4800 README.hp README.linux README.Mac \
    README.MacOSX README.macros README.OS2 README.rs6000 \
    README.sgi README.solaris2 README.uts README.win32 \
    tree.html leak.html gcinterface.html scale.html \
    README.darwin simple_example.html

